--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -93,10 +93,10 @@
             <h3>Situated in the BDA's beautiful countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
         </div>
+	
         <br class="clear">
-    </div><!--content section closed-->
-    <div class="row">
-			<div class="col-12" style="padding: 2%;">
+            <div class="row">
+			    <div class="col-12" style="padding: 2%;">
                     <div id="banner">
                         <div id="banner-wrapper">
                             <h2 class="dark">
@@ -105,50 +105,50 @@
                         </div>
                     </div>
                 </div><!-- end col-12 -->
-	</div> <!-- end class row -->
+	        </div> <!-- end class row -->
                 
-                <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
-                    <div class="col-12">
-                        <img src="images/paper.png" width="95%" ;>
-                    </div><!-- end col-12 -->
-                </div> <!-- end class row -->
+            <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
+                <div class="col-12">
+                    <img src="images/paper.png" width="95%" ;>
+                </div><!-- end col-12 -->
+            </div> <!-- end class row -->
 
-                <div class="row" style="background-color: #f6931e;">
-                    <div class="col-11">
-                        <h2>Get ready for take off.</h2>              
-                        <div class="col-lg-6 order-1 order-lg-2 aos-init aos-animate" data-aos="fade-left">
-                            <img src="../orris0/gran-parents.jpg" width="95%" class="img-fluid" alt="">
-                        </div>            
-                    </div><!-- end col-12 -->
-                </div> <!-- end class row -->
+            <div class="row" style="background-color: #f6931e;">
+                <div class="col-11">
+                    <h2>Get ready for take off.</h2>              
+                    <div class="col-lg-6 order-1 order-lg-2 aos-init aos-animate" data-aos="fade-left">
+                        <img src="../orris0/gran-parents.jpg" width="95%" class="img-fluid" alt="">
+                    </div>                                
+				</div><!-- end col-12 -->
+            </div> <!-- end class row -->
 	
-                <div class="row" style="background-color: #1abc9c;">
-                    <div class="col-11">
-                        <div class="col-3">
-                            <img class="circle" src="images/orange-globe.png">
-                        </div> <!-- end col-3 -->
-                    </div><!-- end col-11 -->
-                </div> <!-- end class row -->
+            <div class="row" style="background-color: #1abc9c;">
+                <div class="col-11">
+                    <div class="col-3">
+                        <img class="circle" src="images/orange-globe.png">
+                    </div> <!-- end col-3 -->
+                </div><!-- end col-11 -->
+            </div> <!-- end class row -->
 
-                <div class="row" style="background-color: #e5ef3f;"> 
-                    <div class="col-11">
-                        <h2 class="dark">Above the clouds &amp; over the sea</h2>
-                        <div class="col-3">
-                            <img class="circle" src="img/waves.png">
-                            <div id="comment"></div> <!-- end col-3 -->
-                        </div> <!-- end col-3 -->
-                    </div> <!-- end .col-11 -->  
-                </div><!-- end .row -->
+            <div class="row" style="background-color: #e5ef3f;"> 
+                <div class="col-11">
+                    <h2 class="dark">Above the clouds &amp; over the sea</h2>
+                    <div class="col-3">
+                        <img class="circle" src="img/waves.png">
+                        <div id="comment"></div> <!-- end col-3 -->
+                    </div> <!-- end col-3 -->
+                </div> <!-- end .col-11 -->  
+            </div><!-- end .row -->
 	
-                <div class="row" style="background-color: #34495e;">
-                    <div class="col-11">
-                        <h2>In just 42 hours and 27 minutes.</h2>
-                        <div class="col-3">
-                            <img class="circle" src="img/plane.png" width="95%" ;>
-                        </div> <!-- end col-3 -->
-                    </div><!-- end class col-11 -->
-                </div> <!-- end class row --><!-- end class row -->
-                
+            <div class="row" style="background-color: #34495e;">
+                <div class="col-11">
+                    <h2>In just 42 hours and 27 minutes.</h2>
+                    <div class="col-3">
+                        <img class="circle" src="img/plane.png";>
+                    </div> <!-- end col-3 -->
+                </div><!-- end class col-11 -->
+            </div> <!-- end class row --><!-- end class row -->
+        </div><!--content section closed-->
                 <footer role="contentinfo" class="row">
                 <div class="footer-inner">
                     <div class="col-12">
@@ -1538,7 +1538,7 @@
                     <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                     <li><a href="#"><i class="instagram"></i></i></a></li>
                 </ul>
-            </div> <!-- end col-3 -->
+            </div> <!-- end col-3 --
         </div> <!-- end class row --
         <a href="https://orris0.github.io/orris0/index.html"
             class="back-to-top d-flex align-items-center justify-content-center"><i
