--- a/index.html
+++ b/index.html
@@ -61,13 +61,20 @@
 </head>
 
 <body>
+	<div class="row">
+        <div class="col-12">
+            <img src="images/kite.png";>
+		</div> <!-- end col-12 -->
+	</div> <!-- end row -->
     <div class="row">
         <div class="col-12">
             <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
-        <div class="data" id="html5style2banner">
-            <h1>StarTrackr!</h1>
-        </div>
-    </header>
+                <div class="data" id="html5style2banner">
+                    <h1>StarTrackr!</h1>
+                </div>
+            </header>
+		</div> <!-- end col-12 -->
+	</div> <!-- end row -->
 	<br class="clear">
     <!--close top section - content area starts -->
     
