--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 	<div class="row">
         <div class="col-12">
             <img src="images/kite.png";>
+			<div class="col-lg-6 order-1 order-lg-2 aos-init aos-animate" data-aos="fade-left">
+                <img src="../orris0/gran-parents.jpg" width="95%" class="img-fluid" alt="">
+            </div>
 		</div> <!-- end col-12 -->
 	</div> <!-- end row -->
     <div class="row">
