--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -109,7 +109,7 @@
                 
             <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                 <div class="col-12">
-                    <img src="images/paper.png" width="95%" ;>
+                    <img id="paper" src="images/paper.png">
                 </div><!-- end col-12 -->
             </div> <!-- end class row -->
 
@@ -125,7 +125,7 @@
             <div class="row" style="background-color: #1abc9c;">
                 <div class="col-11">
                     <div class="col-3">
-                        <img class="circle" src="images/orange-globe.png">
+                        <img id="orange-globe" class="circle" src="images/orange-globe.png">
                     </div> <!-- end col-3 -->
                 </div><!-- end col-11 -->
             </div> <!-- end class row -->
@@ -134,7 +134,7 @@
                 <div class="col-11">
                     <h2 class="dark">Above the clouds &amp; over the sea</h2>
                     <div class="col-3">
-                        <img class="circle" src="img/waves.png">
+                        <img id="waves" class="circle" src="img/waves.png">
                         <div id="comment"></div> <!-- end col-3 -->
                     </div> <!-- end col-3 -->
                 </div> <!-- end .col-11 -->  
@@ -144,7 +144,7 @@
                 <div class="col-11">
                     <h2>In just 42 hours and 27 minutes.</h2>
                     <div class="col-3">
-                        <img class="circle" src="img/plane.png";>
+                        <img id="plane" class="circle" src="img/plane.png";>
                     </div> <!-- end col-3 -->
                 </div><!-- end class col-11 -->
             </div> <!-- end class row --><!-- end class row -->
