--- a/index.html
+++ b/index.html
@@ -863,13 +863,8 @@
         <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
             <p>&copy; Kite-It.</p>
         </div>
-    </div> <!-- End Wrapper-->
-</body>
-<script type="text/javascript" src="js/jquery-1.7.js"></script>
-<script type="text/javascript" src="../orris0/js/script.js"></script>
-<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript" src="./scripts.js"></script>
-
+        <!-- </div> <!-- End Wrapper-->
+    </body>
 </html>
 
 
