--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 </div>
             </header>
 		</div> <!-- end col-12 -->
+		<br class="clear">
 	</div> <!-- end row -->
 	<div class="row">
         <div class="col-12">
