--- a/index.html
+++ b/index.html
@@ -777,7 +777,6 @@
                     </div>
                 </div>
             </section>
-        </div><!-- End Wrapper-->
         <div class="row" style="background-color: #66d4ff;">
             <div class="col-12">
                 <ul class="social">
@@ -789,74 +788,7 @@
                 </ul>
             </div> <!-- end col-3 -->
         </div> <!-- end class row -->
-        <a href="https://orris0.github.io/orris0/index.html"
-            class="back-to-top d-flex align-items-center justify-content-center"><i
-                class="bi bi-arrow-up-short"></i></a>
-        <section id="unsubscribe" class="unsubscribe-form content-section text-center">
-            <div class="block text-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h2>Unsubscribe in just 42 hours and 27 minutes.</h2>
-                            <form class="form" id="unsubscribe-form" method="POST"
-                                action="https://orris0.github.io/orris0/index.html">
-                                <div class="d-none overlay">
-                                    <div class="text-center middle">
-                                        <div class="lds-ellipsis">
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="messages">
-                                </div>
-
-                                <div class="col-lg-12 col-md-12">
-                                    <h5 class="text-center unsub_subheader">We will be very sad if you decide to go!
-                                    </h5>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-lg-3 col-md-2 col-sm-1"></div>
-                                    <div class="col-lg-6 col-md-8 col-sm-10 text-center">
-                                        <div class="form-group element">
-                                            <input class="form-control" type="email" name="email"
-                                                placeholder="Enter your email address" required="required">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-12 col-md-12">
-
-                                    <div style="text-align:center;">
-
-                                    </div>
-
-                                </div>
-
-                                <div class="row">
-
-                                    <div class="col-lg-3 col-md-2 col-sm-1"></div>
-
-                                    <div class="col-lg-6 col-md-8 col-sm-10 text-center">
-
-                                        <button class="btn btn-danger-2" type="submit"><span>
-                                                Unsubscribe
-                                            </span></button>
-
-                                    </div>
-
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <a href="https://orris0.github.io/orris0/index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
         <div id="farewell">Come back and visit us soon!</div>
         <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
             <p>&copy; Kite-It.</p>
