--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -16,7 +16,7 @@
     
     <title>Complete Gallery page & HTML5 Templates</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
