--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -9,7 +9,7 @@
 	        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
             <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
             <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-            <script type="text/javascript" src="js/scripts.js"></script>
+            <script type="text/javascript" src="scripts.js"></script>
             <script type="text/javascript" src="js/jquery-1.7.js"></script>
             <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -385,7 +385,7 @@
                 <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript"></script>
                 <script src="../../lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
                 <script type="text/javascript" src="jquery.highlightonce.js"></script>
-                <script type="text/javascript" src="script.js"></script>
+                <script type="text/javascript" src="scripts.js"></script>
                 <!-- Vendor JS Files -->
                 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
                 <script src="../orris0/aos.css"></script>
