--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -140,6 +140,30 @@
                     <h2>In just 42 hours and 27 minutes.</h2>
                     <div class="col-3">
                         <img id="plane" class="circle" src="img/plane.png";>
+						<div id="side-container">
+                        <p>&nbsp;</p>
+                        <p>Tour Orris (default)</p>
+                        <p>
+                            <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+                            <a href="html5-nav.html">Page 2</a>
+                            <a href="simplistic-side-by-side.html">Page 3</a>
+                            <a href="simplistic-html5-java.html">Page 4</a>
+                            <a href="simplistic-html5.html">Page 5</a>
+                            <a href="gallery-one-col.html">Page 6</a>
+                            <a href="gallery-2col.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                            <a href="gallery-3col-mix.html">Page 1</a>
+                            <a href="gallery-page-validated.html">Page 2</a>
+                            <a href="squares-html5.html">Page 3</a>
+                            <a href="horiz-vert-menu.html">Page 4</a>
+                            <a href="fig2-nifty.html">Page 5</a>
+                            <a href="starter-page.html">Page 6</a>
+                            <a href="index2.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                    </div>
                     </div> <!-- end col-3 -->
                 </div><!-- end class col-11 -->
             </div> <!-- end class row --><!-- end class row -->
@@ -192,30 +216,6 @@
 
                     </div> <!-- end col-12 -->
                 </div> <!-- end class row -->
-				<div id="side-container">
-                        <p>&nbsp;</p>
-                        <p>Tour Orris (default)</p>
-                        <p>
-                            <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                            <a href="html5-nav.html">Page 2</a>
-                            <a href="simplistic-side-by-side.html">Page 3</a>
-                            <a href="simplistic-html5-java.html">Page 4</a>
-                            <a href="simplistic-html5.html">Page 5</a>
-                            <a href="gallery-one-col.html">Page 6</a>
-                            <a href="gallery-2col.html">Page 7</a>
-                        </p>
-                        <p>&nbsp;</p>
-                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                            <a href="gallery-3col-mix.html">Page 1</a>
-                            <a href="gallery-page-validated.html">Page 2</a>
-                            <a href="squares-html5.html">Page 3</a>
-                            <a href="horiz-vert-menu.html">Page 4</a>
-                            <a href="fig2-nifty.html">Page 5</a>
-                            <a href="starter-page.html">Page 6</a>
-                            <a href="index2.html">Page 7</a>
-                        </p>
-                        <p>&nbsp;</p>
-                    </div>
 
 
                 
@@ -367,7 +367,7 @@
                                                     <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                                                     <li><a href="#"><i class="instagram"></i></i></a></li>
                                                 </ul>
-                                            </div> <!-- end col-3 -->>
+                                            </div> <!-- end col-3 -->
                                         </div> <!-- end class row -->
                                         <a href="https://orris0.github.io/orris0/index.html"
                                             class="back-to-top d-flex align-items-center justify-content-center"><i
