--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Gallery-page-Templates</title>
     <meta charset="UTF-8">
 	<!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
-	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
+    <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
     <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
@@ -43,8 +48,7 @@
     <meta property="og:audio:type" content="audio/mpeg">
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
     <meta property="og:description" content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
-    <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
+    
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.com">
