--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -75,7 +75,7 @@
     <![endif]-->
 </head>
 <body>
-    <header class="data" id="gallerypageheader>
+    <header class="data" id="gallerypageheader">
         <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
