--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <p class="advert">Web Design by <br> Orris Baker Jr</p>
         </div>
         <div class="data" id="gallerypagemidcol">
-        <div class midcol-block">
+        <div class="midcol-block">
             <ul id="col-1">
                 <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img
                             class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
