--- a/index.html
+++ b/index.html
@@ -208,13 +208,107 @@
             </ul><br class="clear">
         </div><!--gallery block closed-->
         </div><!--midcol closed-->
+		<div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding: 2%;">
+                <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
+            </div>
+        </div>
 
+        <div class="row" style="background-color: #3c8886; padding: 5% 0 3%;">
+            <div class="col-12">
+                <img id="paper" src="img/paper.png">
+            </div>
+        </div>
+		
+        <div class="row" style="background-color: #f6931e;">
+            <div class="col-11">
+                <h2>Get ready for take off</h2>
+            </div>
+            <div class="col-3">
+                <img id="orange-globe" class="circle" src="../images/orange-globe.png">
+            </div>
+        </div>
+   <!-- </div> -- END SHOWCASE -->
 
+    <div class="features">
+        <div class="row" style="background-color: #1abc9c;">
+            <div class="col-10">
+                <h2>We're flying around the globe</h2>
+            </div>
+            <div class="col-3">
+                <img id="waves" class="circle" src="../images/waves.png">
+            </div>
+        </div>
+    </div>
+	
+    <div class="item3">
+        <div class="row" style="background-color: #e5ef3f;">
+            <div class="col-9">
+                <h2>Above the clouds &amp; over the sea.</h2>
+            </div>
+            <div class="col-3">
+                <img id="plane" class="circle" src="../images/plane.png">
+            </div>
+        </div>
+    </div>
+    <div class="item4">
+        <div class="row" style="background-color: #34495e;">
+            <div class="col-8">
+                <h2>In just 42 hours and 27 minutes</h2>
+            </div>
+            <div class="col-3">
+                <img id="paper-blue" class="circle" src="../images/paper-blue.png">
+            </div>
+        </div>
+    </div>
+    <div class="item5">
+        <div class="row" style="background-color: #00afe1;">
+            <div class="col-7">
+                <h2>So come along for the ride!</h2>
+            </div>
+            <div class="col-3">
+                <img id="globe" class="circle" src="../images/globe.png" width="215px">
+            </div>
+        </div>
+    </div>
+    <div class="item6">
+        <div class="row">
+            <div class="col-12" style="background-color: 66d4ff">
+                <img id="plane-background" src="../images//plane-background.png" width="935px">
+            </div>
+        </div>
+        <div class="row" style="background-color: 66d4ff">
+            <div class="col-12">
+                <h2>Follow Us</h2>
+            </div>
+        </div>
+        <div class="row" style="background-color: 66d4ff">
+            <div class="col-12">
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+                    <li><a href="#"><i class="instagram"></i></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-12">
+        <footer class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+            <p>&copy; Kite-It.</p>
+        </footer>
+    </div>
+</div>
+		
+<!--
         <div class="row">
         <div class="col-12" style="padding: 2%;">
             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
         </div>
         </div>
+		
         <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img id="paper" src="img/paper.png">
@@ -247,10 +341,10 @@
                                     title="Cliffs"><img class="hid" src="../orriso/bda-18.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed-->
+            </div><!--midcol closed--
         </div>
         </div>
-
+--
         <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
@@ -282,9 +376,10 @@
                                     title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed-->
-        </div> <!-- end col-11 -->
+            </div><!--midcol closed--
+        </div> <!-- end col-11 --
         </div>
+	<!--
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
             <!-- <div id="midcol-5">
@@ -316,7 +411,7 @@
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed-->
+            </div><!--midcol closed--
         </div>
         <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
@@ -350,7 +445,7 @@
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed -->
+            </div><!--midcol closed --
         </div>
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
@@ -383,7 +478,7 @@
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed -->
+            </div><!--midcol closed --
         </div>
         </div>
         <div class="row" style="background-color: #E5EF3F;">
@@ -417,12 +512,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
-        </div><!--end col-11 -->
+                </div><!--gallery block closed--
+        </div><!--end col-11 --
         <div class="col-3">
             <img id="waves" src="img/waves.png">
         </div>
-        </div><!--end class-row -->
+        </div><!--end class-row --
 
         <div class="row" style="background-color: #e5ef3f;">
             <div class="col-11">
@@ -455,7 +550,7 @@
                                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                         </p>
 
-                                    </div><!-- end col-12 --> <img src="../orris.jpg" width="400px" height="400px"
+                                    </div><!-- end col-12 -- <img src="../orris.jpg" width="400px" height="400px"
                                         class="testimonial-img" alt="">
 
                                     <h3>#</h3>
@@ -536,7 +631,7 @@
 
                                 </div>
 
-                            </div><!-- End testimonial item -->
+                            </div><!-- End testimonial item --
 
                             <div class="swiper-slide" data-swiper-slide-index="1" role="group" aria-label="2 / 4"
                                 style="width: 418.667px; margin-right: 20px;">
@@ -559,7 +654,7 @@
                                     <h4></h4>
                                 </div>
 
-                            </div><!-- End testimonial item -->
+                            </div><!-- End testimonial item --
 
                             <div class="swiper-slide swiper-slide-prev" data-swiper-slide-index="2" role="group"
                                 aria-label="3 / 4" style="width: 418.667px; margin-right: 20px;">
@@ -589,7 +684,7 @@
 
                                 </div>
 
-                            </div><!-- End testimonial item -->
+                            </div><!-- End testimonial item --
 
                             <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="3" role="group"
                                 aria-label="4 / 4" style="width: 418.667px; margin-right: 20px;">
@@ -653,7 +748,7 @@
 
                                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
                             </div>
-                        </div><!-- end-testimonials -->
+                        </div><!-- end-testimonials --
                     </div>
                     <div class="col-3">
                         <img class="circle" src="img/waves.png">
@@ -664,15 +759,15 @@
                             <h2>In just 42 hours and 27 minutes.</h2>
                             <div class="col-3">
                                 <img id="plane" class="circle" src="img/plane.png" width="960px" ;>
-                            </div> <!-- end col-3 -->
-                        </div><!-- end class col-11 -->
-                    </div> <!-- end class row --><!-- end class row -->
+                            </div> <!-- end col-3 --
+                        </div><!-- end class col-11 --
+                    </div> <!-- end class row --><!-- end class row --
 
 
 
 
         </div>
-
+-->
 
             <div class="row">
 
