--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- end row -->
 	    <div class="row">
             <div class="col-12">
-                <img id="kite" src="images/kite.png";>
+                <img id="kite" src="img/kite.png";>
 		    </div> <!-- end col-12 -->
 	    </div> <!-- end row -->
 	    <br class="clear">
@@ -236,7 +236,7 @@
                 <h2>We're flying around the globe</h2>
             </div>
             <div class="col-3">
-                <img id="waves" class="circle" src="../images/waves.png">
+                <img id="waves" class="circle" src="./img/waves.png">
             </div>
         </div>
     </div>
@@ -257,7 +257,7 @@
                 <h2>In just 42 hours and 27 minutes</h2>
             </div>
             <div class="col-3">
-                <img id="paper-blue" class="circle" src="../images/paper-blue.png">
+                <img id="paper-blue" class="circle" src="./img/paper-blue.png">
             </div>
         </div>
     </div>
