--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 	
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script type="text/javascript" src="./scripts.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
     <link rel="stylesheet" type="text/css" href="./CSS/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
     <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
