--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div class="row" style="background-color: #3c8886; padding: 5% 0 3%;">
             <div class="col-12">
-                <img id="paper" src="img/paper.png">
+                <img id="paper" src="./img/paper.png">
             </div>
         </div>
 		
@@ -224,7 +224,7 @@
                 <h2>Get ready for take off</h2>
             </div>
             <div class="col-3">
-                <img id="orange-globe" class="circle" src="../images/orange-globe.png">
+                <img id="orange-globe" class="circle" src="./img/orange-globe.png">
             </div>
         </div>
    <!-- </div> -- END SHOWCASE -->
@@ -246,7 +246,7 @@
                 <h2>Above the clouds &amp; over the sea.</h2>
             </div>
             <div class="col-3">
-                <img id="plane" class="circle" src="../images/plane.png">
+                <img id="plane" class="circle" src="./img/plane.png">
             </div>
         </div>
     </div>
@@ -266,14 +266,14 @@
                 <h2>So come along for the ride!</h2>
             </div>
             <div class="col-3">
-                <img id="globe" class="circle" src="../images/globe.png" width="215px">
+                <img id="globe" class="circle" src="./img/globe.png" width="215px">
             </div>
         </div>
     </div>
     <div class="item6">
         <div class="row">
             <div class="col-12" style="background-color: 66d4ff">
-                <img id="plane-background" src="../images//plane-background.png" width="935px">
+                <img id="plane-background" src="./img/plane-background.png" width="935px">
             </div>
         </div>
         <div class="row" style="background-color: 66d4ff">
