--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div class="row" style="background-color: #3c8886; padding: 5% 0 3%;">
             <div class="col-12">
-                <img id="paper" src="./img/paper.png">
+                <img id="paper" src="images/paper.png">
             </div>
         </div>
 		
@@ -224,7 +224,7 @@
                 <h2>Get ready for take off</h2>
             </div>
             <div class="col-3">
-                <img id="orange-globe" class="circle" src="./img/orange-globe.png">
+                <img id="orange-globe" class="circle" src="images/orange-globe.png">
             </div>
         </div>
    <!-- </div> -- END SHOWCASE -->
@@ -235,7 +235,7 @@
                 <h2>We're flying around the globe</h2>
             </div>
             <div class="col-3">
-                <img id="waves" class="circle" src="./img/waves.png">
+                <img id="waves" class="circle" src="./images/waves.png">
             </div>
         </div>
     </div>
@@ -246,7 +246,7 @@
                 <h2>Above the clouds &amp; over the sea.</h2>
             </div>
             <div class="col-3">
-                <img id="plane" class="circle" src="./img/plane.png">
+                <img id="plane" class="circle" src="./images/plane.png">
             </div>
         </div>
     </div>
