--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <h2>We're flying around the globe</h2>
             </div>
             <div class="col-3">
-                <img id="waves" class="circle" src="./images/waves.png">
+                <img id="waves" class="circle" src="images/waves.png">
             </div>
         </div>
     </div>
@@ -246,7 +246,7 @@
                 <h2>Above the clouds &amp; over the sea.</h2>
             </div>
             <div class="col-3">
-                <img id="plane" class="circle" src="./images/plane.png">
+                <img id="plane" class="circle" src="images/plane.png">
             </div>
         </div>
     </div>
@@ -256,7 +256,7 @@
                 <h2>In just 42 hours and 27 minutes</h2>
             </div>
             <div class="col-3">
-                <img id="paper-blue" class="circle" src="./img/paper-blue.png">
+                <img id="paper-blue" class="circle" src="images/paper-blue.png">
             </div>
         </div>
     </div>
@@ -266,7 +266,7 @@
                 <h2>So come along for the ride!</h2>
             </div>
             <div class="col-3">
-                <img id="globe" class="circle" src="./img/globe.png" width="215px">
+                <img id="globe" class="circle" src="images/globe.png" width="215px">
             </div>
         </div>
     </div>
