--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <!-- Optional Metadata-->
     <meta property="og:audio:type" content="audio/mpeg">
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
-    <meta property="og:description"
-        content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+    <meta property="og:description" content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
