--- a/index.html
+++ b/index.html
@@ -235,12 +235,10 @@
         <div class="data" id="gallerypagerightcol">
             StarTrackr<br><br>
             <p><a href="http://validator.w3.org/check?uri=referer">
-                    <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                        alt="Validated HTML5" title="Validated HTML5"></a>
+                    <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
             </p>
             <p>
-                <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
-                        title="Valid CSS!" alt="Valid CSS!"></a>
+                <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
                 <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
             </p>
             <br class="clear">
