--- a/index.html
+++ b/index.html
@@ -244,16 +244,14 @@
         <div id="rightcol">
             Secondary information<br><br>
             <p><a href="http://validator.w3.org/check?uri=referer">
-                    <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                        alt="Validated HTML5" title="Validated HTML5"></a>
+                <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
             </p>
             <p>
-                a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
-                    title="Valid CSS!" alt="Valid CSS!"></a>
+                <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
                 <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
             </p>
             <br class="clear">
-            <p class="advert">Web Design by Fred Bloggs</p>
+            <p class="advert">Web Design by Orris Baker</p>
         </div>
         <div id="midcol">
             <div id="gallery-block">
@@ -312,12 +310,9 @@
                     <div id="gallerypagemidcol">
                         <div class="data" id="gallerypagegallery-block">
                             <ul id="col-1">
-                                <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid"
-                                            src="images/alibig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid"
-                                            src="images/catbig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img
-                                            class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                             </ul>
                             <ul id="col-2">
                                 <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img
@@ -339,7 +334,7 @@
                             </ul><br class="clear">
                         </div><!--gallery block closed-->
                     </div><!--midcol closed-->
-                    <br class="clear">
+                    
 
 
 
