--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <meta property="og:image" content="https://orris0.github.io/rock3.jpg">
         <meta property="og:image:height" content="1000">
         <link rel="stylesheet" type="text/css" href="../html5-boilerplate_v9.0.0/css/style.css">
-        <!--<link rel="stylesheet" type="text/css" href="../CSS/css/inline-block.css"> -->
+        <link rel="stylesheet" type="text/css" href="../CSS/css/inline-block.css"> 
         <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css">
         <link rel="stylesheet" href="./css/style.css">
 
