--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Core theme CSS (includes Bootstrap)-->
-     <link rel="stylesheet" type="text/css" href="../CSS/css/inline-block.css"> 
-        <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css">
-        <link rel="stylesheet" href="./css/style.css">
+     <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
+        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
+        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
     <script type="text/javascript" src="../js/jquery-1.7-min.js"></script>
