--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
-
-<head profile="http://www.w3.org/2005/10/profile">
-    <link rel="icon" type="image/png" href="http://example.com/myicon.png">
-
-    <title>Gallery-page-Templates</title>
-    <!--
+    <head profile="http://www.w3.org/2005/10/profile">
+        <title>Gallery-page-Templates</title>
+        <!--
         The following 2 meta tags *must* come first in the <head>
 	        to consistently ensure proper document rendering.
         Any other head element should come *after* these tags.
         -->
-    <!-- meta details go here -->
+        <!-- meta details go here -->
 
-    <!-- Set character encoding for the document -->
-    <meta charset="utf-8">
+        <!-- Set character encoding for the document -->
+        <meta charset="utf-8">
 
-    <!-- Viewport for responsive web design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Viewport for responsive web design -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Core theme CSS (includes Bootstrap)-->
-     <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-    <script type="text/javascript" src="../js/jquery-1.7-min.js"></script>
-    <script! src=”../js/jquery.mobile-1.0.1.min.js”>
-    </script>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+        <script type="text/javascript" src="../js/jquery-1.7-min.js"></script>
+        <script! src="../../orris0/orris0/js/scripts.js"></script>
         <!--
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
