--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-        <script type="text/javascript" src="../js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
         <script! src="../../orris0/orris0/js/scripts.js"></script>
+        <script! src="../../orris0/orris0/js/script.js"></script>
         <!--
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
