--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <meta property="og:image" content="https://orris0.github.io/rock2.jpg">
         <meta property="og:image" content="https://orris0.github.io/rock3.jpg">
         <meta property="og:image:height" content="1000">
-        <link rel="stylesheet" type="text/css" href="../html5-boilerplate_v9.0.0/css/style.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../html5-boilerplate_v9.0.0/css/style.css"> -->
         
         <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> -->
         <link rel="stylesheet" href=”http://code.jquery.com/mobile/1.0.1 jquery.mobile-1.0.1.min.css”>
