--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -27,7 +27,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
-        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+       <!-- <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> -->
 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
