--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- <link rel="stylesheet" type="text/css" href="../html5-boilerplate_v9.0.0/css/style.css"> -->
         
         <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> -->
-        <link rel="stylesheet" href=”http://code.jquery.com/mobile/1.0.1 jquery.mobile-1.0.1.min.css”>
+        <link rel="stylesheet" href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
         <!-- Font Awesome Icons -->
 
         <link rel="icon" href="./favicon.ico" sizes="any">
