--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         <meta property="og:audio:secure_url" content="https://secure.orris0.github.io/sound.mp3">
         <meta property="og:audio:type" content="audio/mpeg">
         <meta property="og:audio" content="https://orris0.github.io/bond/theme.mp3">
-        <meta property="og:description"
-            content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+        <meta property="og:description" content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
         <meta property="og:determiner" content="the">
         <meta property="og:locale" content="en_GB">
         <meta property="og:locale:alternate" content="fr_FR">
