--- a/index.html
+++ b/index.html
@@ -127,24 +127,19 @@
         <meta property="og:image" content="https://orris0.github.io/rock3.jpg">
         <meta property="og:image:height" content="1000">
         <!-- <link rel="stylesheet" type="text/css" href="../html5-boilerplate_v9.0.0/css/style.css"> -->
-        
         <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> -->
         <link rel="stylesheet" href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
         <!-- Font Awesome Icons -->
-
         <link rel="icon" href="./favicon.ico" sizes="any">
         <link rel="icon" href="./icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="./icon.png">
-
         <link rel="manifest" href=".././CSS/css/site.webmanifest">
         <link href="../CSS/css/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-            rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <!-- Plugin CSS -->
         <!-- Theme CSS - Includes Bootstrap -->
-
         <!-- Favicon-->
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
         <link rel="alternate" type="application/pdf" href="MainPage.pdf">
@@ -152,26 +147,17 @@
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
-            rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
 
-        <script async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-            crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <script src=”http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js”></script>
-
         <script type=”text/javascript” src=”assets/js/ui.js”></script>
-
         <script type="text/javascript" src="../js/script.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-        <script async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-            crossorigin="anonymous"></script>
-
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <!--Add conditional Javascript-->
-
         <!--[if lte IE 8]>
                 <script src="js/html5.js" type="text/javascript"></script>
             <![endif]-->
