--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- end row -->
         <div class="row">
             <div class="col-12">
-                <img id="kite" src="img/kite.png" ;>
+                <img id="kite" src="img/kite.png" width="960px" ;>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         <br class="clear">
