--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
-                <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
+                <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
                     <div class="data" id="html5style2banner">
                         <h1>StarTrackr!</h1>
                     </div>
@@ -178,7 +178,7 @@
         <!-- end row -->
         <div class="row">
             <div class="col-12">
-                <img id="kite" src="img/kite.png" width="960px";>
+                <img id="kite" src="img/kite.png">
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         <br class="clear">
