--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
-        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
+        
         
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
-        <script! src="../../orris0/orris0/js/scripts.js"></script>
-        <script! src="../../orris0/orris0/js/script.js"></script>
+        <script! src="./js/scripts.js"></script>
+        <script! src="./js/script.js"></script>
         <!--
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
