--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- end row -->
         <div class="row">
             <div class="col-12">
-                <img id="kite" src="img/kite.png">
+                <img id="kite" src="img/kite.png" width: 970px;>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         <br class="clear">
