--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
+		
         <title>Gallery-page-Templates</title>
         <!--
         The following 2 meta tags *must* come first in the <head>
@@ -10,7 +11,7 @@
         <!-- meta details go here -->
 
         <!-- Set character encoding for the document -->
-        <meta charset="utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
