--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css">
+        <link rel="stylesheet" type="text/css" href="../../orris0/CSS/HTML5-style-2.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
