--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
 		
         <title>Gallery-page-Templates</title>
+		
         <!--
         The following 2 meta tags *must* come first in the <head>
 	        to consistently ensure proper document rendering.
@@ -15,12 +16,17 @@
 
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- Jquerymobile -->
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+
+		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="script.js"></script>
         <link rel="stylesheet" type="text/css" href="../../orris0/CSS/HTML5-style-2.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-        <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
-        <script! src="../orris0/js/scripts.js"></script>
-        <script! src="../orris0/js/script.js"></script>
+        
         <!--
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
