--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Jquerymobile -->
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-
+		<!-- Jquery -->
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script>
         <link rel="stylesheet" type="text/css" href="../../orris0/CSS/HTML5-style-2.css">
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <!-- code.jquery.com/mobile-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         
         <!--
