--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 
         </footer>
         <br class="clear">
+	</div> <-- end wrapper -->
         <header>
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
@@ -469,7 +470,7 @@
                     </div>
             </div>
 
-            <!--
+            
         <div class="row">
         <div class="col-12" style="padding: 2%;">
             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
@@ -507,11 +508,11 @@
                         <li><a href="#"><img src="../orris0/bda-18.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="../orriso/bda-18.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-            </div><!--midcol closed--
+                </div><!--gallery block closed-->
+            </div><!--midcol closed-->
         </div>
         </div>
---
+
         <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
@@ -543,10 +544,10 @@
                                     title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed--
-            </div><!--midcol closed--
-        </div> <!-- end col-11 --
+            </div><!--midcol closed-->
+        </div> <!-- end col-11 -->
         </div>
-	<!--
+	
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
             <!-- <div id="midcol-5">
@@ -577,8 +578,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-            </div><!--midcol closed--
+                </div><!--gallery block closed-->
+            </div><!--midcol closed-->
         </div>
         <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
@@ -611,8 +612,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-            </div><!--midcol closed --
+                </div><!--gallery block closed-->
+            </div><!--midcol closed -->
         </div>
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
@@ -644,14 +645,14 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" vwidth="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-            </div><!--midcol closed --
+                </div><!--gallery block closed-->
+            </div><!--midcol closed -->
         </div>
         </div>
         <div class="row" style="background-color: #E5EF3F;">
         <div class="col-11">
             <h2>Above the clouds &amp; over the sea.</h2>
-            <!-- <div id="midcol-8">
+            <div id="midcol-8">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
@@ -679,8 +680,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-        </div><!--end col-11 --
+                </div><!--gallery block closed-->
+        </div><!--end col-11 -->
         <div class="col-3">
             <img id="waves" src="img/waves.png">
         </div>
