--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </footer>
         <br class="clear">
 	
-        <header>
+        <header class="data" id="gallerypageheader">
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
         </header>
