--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- end row -->
         <div class="row">
             <div class="col-12">
-                <img id="kite" src="img/kite.png" width: 970px;>
+                <img id="kite" src="img/kite.png";>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         <br class="clear">
