--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
                 <script src="../orris0/swiper-bundle.min.js"></script>
                 <script src="../orris0/validate.js"></script>
                 <!--jQuery JS-->
-                <script src="../orris0/js/scripts.js"></script>
+                <script src="../orris0/js/script.js"></script>
                 <!-- Template Main JS File -->
                 <script src="../orris0/main.js"></script>
                 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
