--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
                     <!--Add a conditional for IE 7 and IE 8 to push the content below the menu-->
 <!--[if lte IE 7]>
                         <br>
-                        <![endif]--
+                        <![endif]-->
                     <div id="horizontal-variable-3d-main-content">
                         <br>This content panel can contain several columns<br><br><br>
                     </div>
