--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,9 @@
                     </ul>
                 </nav>
                 <br class="clear"> 
-            </div><!-- end-header --<br class="clear"> <br class="clear">
+            </div><!-- end-header --> 
+            <br class="clear"> 
+            <br class="clear">
             <!-- ======= Hero Section ======= -->
             <section class="data" id="hero" class="d-flex align-items-center scrolled-offset">
                 <div class="container position-relative aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
