--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
 		<!-- Jquery -->
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./script.js"></script>
+		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../../orris0/orris0/js/scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../../orris0/CSS/HTML5-style-2.css">
         <!-- code.jquery.com/mobile-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
